---------------------------------------------------------------------------------------------------
Version: 2.0.1
Date: ????
  Changes:
---------------------------------------------------------------------------------------------------
Version: 2.0.0
Date: 2020-07-19
  Features:
    - Added the ability to "pin" the GUI to the screen, so it can exist alongside other windows
    - Added the ability to "favorite" an object for easy access later
    - Added browse-able search history, keeping track of the last 20 searches
    - Added setting to display internal prototype names instead of translations
    - Added object type glyphs
    - Added settings for toggling specific recipe categories
    - Added an in-game settings screen for on-the-fly changes
    - Added German translation by LuziferSenpai
  Changes:
    - Completely rewrote the mod from scratch to improve code quality, efficiency, and structure
    - Search and information are now combined into one window
    - Information listboxes are significantly wider and are arranged in a single column
    - Absolutely all recipes are now included in the Recipe Book data
    - The GUI will remain open when clicking on a technology
    - Remote Interface:
      - Added check_obj_valid function
      - Renamed open_gui to open_page and changed argument formatting (see docs)
      - Removed tie-ins to the back button and associated events (reopen_source_event)
  Bugfixes:
    - Fixed several crashes related to GUI buttons and multiplayer latency

---------------------------------------------------------------------------------------------------
Version: 1.3.6
Date: 2020-06-24
  Bugfixes:
    - Fixed a crash related to GUI style changes in Factorio 0.18.33
    - Fixed typos in changelog
---------------------------------------------------------------------------------------------------
Version: 1.3.5
Date: 2020-06-19
  Features: